# docker-multistaging

./: .gitignore  Dockerfile  Dockerfile.opt  README.md  pyproject.toml  training.ipynb
app/: lgbm_model.pkl  main.py
