[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "Docker-Multistaging"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "scikit-learn==1.3.2",
    "lightgbm==4.5.0",
    "numpy==1.26.4",
    "pandas",
    "openpyxl",
    "jupyter",
    "notebook",
    "jupyterlab",
    "ipython"
]